--- a/src/main/resources/templates/main.mustache
+++ b/src/main/resources/templates/main.mustache
@@ -11,7 +11,7 @@
         </form>
     </div>
     <div>
-        <form method="post">
+        <form action="/main" method="post">
             <input type="text" name="text" placeholder="Введите сообщение" />
             <input type="text" name="tag" placeholder="Тэг" />
             <input type="hidden" name="filter" />
@@ -30,8 +30,9 @@
     {{#messages}}
         <div>
             <b>{{id}}</b>
-            <b>{{text}}</b>
-            <b>{{tag}}</b>
+            <span>{{text}}</span>
+            <i>{{tag}}</i>
+            <strong>{{authorName}}</strong>
         </div>
     {{/messages}}
 
